--- a/app-frontend/src/index.css
+++ b/app-frontend/src/index.css
@@ -40,11 +40,12 @@
 
 * {
   box-sizing: border-box;
+  font-size: small; /* crucial changes*/
 }
 
 body {
   margin: 0;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;;
   /* use the modern gradient across the whole app */
   background: var(--gradient-bg);
   color: var(--text-primary);
