--- a/frontend-app/src/App.css
+++ b/frontend-app/src/App.css
@@ -12,6 +12,6 @@
 
 /* Global CSS for the all DataTable header */
 .p-datatable.p-datatable-sm .p-datatable-thead > tr > th {
-  background-color: #95a8b5;
+  background-color:#616161;
   color: white;
 }
